<?xml version="1.0"?>
<package format="3">
  <name>savo_ui</name>
  <version>0.1.0</version>

  <description>
    Robot Savo UI stack: drives the 7&quot; DFRobot DSI display on the Raspberry Pi.
    Renders eyes and mouth animation based on /savo_speech topics, and shows
    navigation and mapping status (INTERACT / NAVIGATE / MAP modes).
  </description>

  <maintainer email="tahmidahnaf998@gmail.com">Ahnaf Tahmid</maintainer>
  <license>Proprietary</license>

  <!-- Python-based ROS 2 package, same style as savo_speech -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS 2 runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- UI may listen to IntentResult / NavState / RobotStatus in future -->
  <exec_depend>savo_msgs</exec_depend>

  <!-- Launch system (for savo_ui_bringup.launch.py, debug launches, etc.) -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Drawing backend for the DSI screen (Pygame) -->
  <exec_depend>python3-pygame</exec_depend>

  <!-- Testing + linting tools (optional but good to mirror savo_speech) -->
  <test_depend>ament_pytest</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <!-- Tell colcon/ament that this is an ament_python package -->
    <build_type>ament_python</build_type>
  </export>
</package>
