[metadata]
name = savo_ui
version = 0.1.0
description = Robot Savo UI stack: drives the 7" DFRobot DSI display with INTERACT (face), NAVIGATE (camera + overlay), and MAP modes.
long_description = Robot Savo UI package for Robot Savo campus guide robot. Provides face UI, navigation camera view, and mapping status on the 7" DFRobot DSI display.
long_description_content_type = text/plain
author = Robot Savo Team
maintainer = Ahnaf Tahmid
maintainer_email = tahmidahnaf998@gmail.com
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Framework :: Robot Operating System :: ROS2

[options]
packages = find:
install_requires =
    setuptools
zip_safe = true

[options.packages.find]
where = .

# ---------------------------------------------------------------------------
# ROS 2 / ament_python: ensure console_scripts go to lib/savo_ui
# ---------------------------------------------------------------------------
[develop]
script_dir = $base/lib/savo_ui

[install]
install_scripts = $base/lib/savo_ui

# ---------------------------------------------------------------------------
# Testing / linting
# ---------------------------------------------------------------------------
[tool:pytest]
addopts = -v
testpaths =
    tests

[flake8]
max-line-length = 99
extend-ignore =
    E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[pep8]
max-line-length = 99

