<?xml version="1.0"?>
<package format="3">
  <name>savo_nav</name>
  <version>0.0.1</version>
  <description>Navigation helpers: safety, kinematics, Nav2 interface</description>
  <maintainer email="todo@example.com">TODO_NAME</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
</package>
